# libevents

./: .gdbinit  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cc
src/base/: error.cc  error.h  object.h
src/events/: errorevent.cc  errorevent.h  event.cc  event.h  eventdispatcher.cc  eventdispatcher.h  eventlistener.cc  eventlistener.h  events.cc  events.h  eventtarget.cc  eventtarget.h  exception.cc  exception.h
tests/: CMakeLists.txt
tests/events/: dummyeventdispatcher.cc  dummyeventdispatcher.h  dummyeventtarget.cc  dummyeventtarget.h  eventdispatcher_test.cc  eventtarget_test.cc
